--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-apache-airflow==2.8.1
-Flask-Session>=0.4.0
 pyspark==3.5.1
 duckdb==0.10.0
 requests==2.31.0
 pandas==2.2.1
-apache-airflow-providers-fab
+apache-airflow==2.8.1
+apache-airflow-providers-fab==1.0.1
+Flask-Session>=0.4.0
